<?xml version="1.0"?>
<package format="2">
  <name>ros_libvlc</name>
  <version>0.3.0</version>
  <description>Stream data from vlc into sensor_msgs/Image</description>

  <author email="daniel.robin.reuter@googlemail.com">Daniel Reuter</author>
  <maintainer email="daniel.robin.reuter@googlemail.com">Daniel Reuter</maintainer>

  <license>MIT</license>
  <url type="website">https://github.com/dreuter/ros_libvlc</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <build_depend>libvlc-dev</build_depend>
  <depend>libvlc</depend>

</package>